--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -10,7 +10,8 @@
 }
 .messageArea {
   height: 60vh;
-  overflow-y: hidden;
+  overflow-y: auto;
+  width: 100%;
 }
 .head {
   display: flex;
@@ -20,9 +21,17 @@
 .icons {
   cursor: pointer;
 }
+.userlist-main {
+  max-height: 500px;
+  overflow-y: auto;
+  width: 100%;
+}
 .user-sent-message {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
+}
+.inputText-main{
+  padding: 20px;
 }
