--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -33,8 +33,8 @@
   justify-content: space-between;
 }
 .inputText-main {
-  height: auto;
-  width: 100%;
-  position: sticky;
+  position: absolute;
   bottom: 0;
+  width: 100%;
+  background-color: #fff;
 }
