changes done as it is figma

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
 .App {
   text-align: center;
 }
@@ -6,6 +8,11 @@
   height: 40vmin;
   pointer-events: none;
 }
+
+body {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
