--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -16,7 +16,13 @@
 .head {
   display: flex;
   justify-content: space-between;
+  padding: 10px 30px;
+}
+.UserHead {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  padding: 10px 30px;
 }
 .icons {
   cursor: pointer;
@@ -25,6 +31,9 @@
   max-height: 500px;
   overflow-y: auto;
   width: 100%;
+}
+.listItem {
+  padding: 10px 30px !important;
 }
 .user-sent-message {
   display: flex;
@@ -37,4 +46,17 @@
   bottom: 0;
   width: 100%;
   background-color: #fff;
+}
+.time {
+  font-size: 12px;
+  color: #7c8fac;
+}
+.mediaImg {
+  border-radius: 15%;
+  height: 400px;
+}
+.filesImg {
+  background-color: #f2f6fa;
+  padding: 10px;
+  border-radius: 10px;
 }
